# Pinocchio

./: CMakeLists.txt
AttachWeights/: CMakeLists.txt
DemoUI/: CMakeLists.txt
Pinocchio/: CMakeLists.txt  rect.h  vector.h
PinocchioStatic/: CMakeLists.txt
